# TimeTableAssistance_API

API/: README.md  Sem5_TT.json  Sem5_TT.xlsx  main.py  pyproject.toml  requirements.txt
